--- a/EXT-RadioPlayer.css
+++ b/EXT-RadioPlayer.css
@@ -1,5 +1,5 @@
 #EXT_RADIO {
-  width: 240px;
+  min-width: 240px;
   font-size: 16px;
   height: auto;
   font-size: large;
@@ -43,6 +43,6 @@
   top:0;
   left:0;
   width:100%;
-  height:100%;
+  height:100px;
   z-index:0;
 }
