--- a/EXT-RadioPlayer.css
+++ b/EXT-RadioPlayer.css
@@ -1,5 +1,5 @@
 #EXT_RADIO {
-  width: 300px;
+  width: 250px;
   font-size: medium;
   height: 140px;
   line-height: 1.5em;
@@ -40,6 +40,19 @@
   height: auto;
 }
 
+#EXT_RADIO-RadioLogo.WipeEnter {
+  animation: RadioWipeEnter 1s 1;
+}
+
+@keyframes RadioWipeEnter {
+  0% {
+    transform: scale(0, .01);
+  }
+  50% {
+    transform: scale(1, .01);
+  }
+}
+
 #EXT_RADIO-MarqueeContainer {
   height: 25px;
   width: 100%;
@@ -67,67 +80,3 @@
   100% { left: -100%; }
 }
 
-
-/* old
-#EXT_RADIO {
-  min-width: 240px;
-  font-size: 16px;
-  height: 100px;
-  font-size: large;
-  line-height: 1.5em;
-  display: inline-block;
-  position: relative;
-}
-
-#EXT_RADIO.hidden {
-  display: none;
-}
-
-#EXT_RADIO_IMG {
-  height: 100px;
-  width: auto;
-  background-size: 100%;
-  background-repeat: no-repeat;
-  background-position: 0;
-  margin-left: auto;
-  margin-right: auto;
-}
-
-#EXT_RADIO_FOREGROUND {
-  position:relative;
-  filter:none;
-  width:100%;
-  height:100%;
-  display:flex;
-  box-sizing:border-box;
-  flex-direction:row;
-  justify-content: space-between;
-  padding:0;
-}
-
-#EXT_RADIO_BACKGROUND {
-  background-size: cover;
-  background-position: center center;
-  filter: blur(16px) opacity(90%) grayscale(33%);
-  position: absolute;
-  top: 13%;
-  left: 13%;
-  width: 75%;
-  height: 75%;
-  z-index: 0;
-}
-
-#EXT_RADIO_IMG.WipeEnter,
-#EXT_RADIO_BACKGROUND.WipeEnter {
-  animation: RadioWipeEnter 1s 1;
-}
-
-@keyframes RadioWipeEnter {
-  0% {
-    transform: scale(0, .01);
-  }
-  50% {
-    transform: scale(1, .01);
-  }
-}
-*/
